# hic

./: .env.example  .gitignore  AI_COPILOT_SETUP.md  COMPACTION_FIX_SUMMARY.md  COMPACTION_SUCCESS.md  COMPLEX_TEST_CN_COMPLETION_SUMMARY.md  LLM_PROVIDER_SWITCHING.md  MIGRATION_GUIDE.md  PROJECT_STATUS.md  README.md  README_human.md  REALTIME_REPORTING_TEST_RESULTS.md  REFACTOR_SUMMARY.md  ZOO_DIRECTOR_EXAMPLE_SUMMARY.md  example_chat.py  pyproject.toml
agent/: __init__.py  agent.py  async_logger.py  builtin_tools.py  callbacks.py  compaction.py  config.py  context.py  copilot_llm.py  deepseek_llm.py  llm.py  orchestrator.py  parser.py  permissions.py  schemas.py  skill.py  token_counter.py  tool.py  tool_result.py  truncation.py
docs/: AI_COPILOT_SETUP.md  BASH_EXAMPLES_README.md  BASH_TOOL_MIGRATION.md  BUILTIN_TOOLS.md  CALLBACK_SYSTEM_SUMMARY.md  CHANGELOG_async.md  CHANGELOG_logging_unification.md  COLORFUL_VERBOSE_MODE_SUMMARY.md  EDIT_TOOL.md  GREP_GLOB_TODO.md  OPENCODE_BUILTIN_TOOLS_ANALYSIS.md  QUESTION_WEBFETCH.md  TOOL_INFRASTRUCTURE_IMPLEMENTATION.md  TOOL_INFRASTRUCTURE_README.md  TOOL_ROLE_FIX.md  VERBOSE_MODE_AND_DOTENV_SUMMARY.md  hic_compaction_implementation_plan.md  opencode_compaction_analysis.md
examples/: COMPLEX_INTEGRATED_TEST_CN_README.md  README_async.md  README_compaction.md  agent_python_bash_demo.py  agent_read_write_edit_demo.md  agent_read_write_edit_demo.py  agent_with_callbacks.py  async_codex.py  async_parallel_agents.py  async_parallel_agents_real.py  builtin_tool_call.py  codex_hello.py  complex_agent_verbose.py  copilot_example.py  (+17 more)
(+49 files in other folders)
